--- a/style.css
+++ b/style.css
@@ -33,3 +33,13 @@ button {
   border-bottom-right-radius: 24px;
   font-size: 20px;
 }
+
+/* button {
+  width: 50%;
+  padding: 10px;
+  border-top-left-radius: 24px;
+  border-bottom-left-radius: 24px;
+  border-top-right-radius: 24px;
+  border-bottom-right-radius: 24px;
+  font-size: 20px;
+} */
